project3/spl-spec/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI

    6 $@1: %empty

    7 ExtDef: Specifier FunDec $@1 CompSt
    8       | Specifier ExtDecList error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec ExtDecList error

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT ID LC DefList RC
   15                | STRUCT ID
   16                | STRUCT ID LC DecList error

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB INT error

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP VarList error
   23       | ID LP error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec VarList error
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: %empty
   30         | Stmt StmtList

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | WHILE LP Exp error Stmt
   38     | Exp error
   39     | RETURN Exp error
   40     | IF LP Exp error Stmt

   41 DefList: %empty
   42        | Def DefList

   43 Def: Specifier DecList SEMI
   44    | Specifier DecList error
   45    | error DecList SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList
   48        | Dec DecList error

   49 Dec: VarDec
   50    | VarDec ASSIGN Exp

   51 Exp: Exp ASSIGN Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp LT Exp
   55    | Exp LE Exp
   56    | Exp GT Exp
   57    | Exp GE Exp
   58    | Exp NE Exp
   59    | Exp EQ Exp
   60    | Exp PLUS Exp
   61    | Exp MINUS Exp
   62    | Exp MUL Exp
   63    | Exp DIV Exp
   64    | LP Exp RP
   65    | LP Exp error
   66    | MINUS Exp
   67    | NOT Exp
   68    | ID LP Args RP
   69    | ID LP Args error
   70    | ID LP RP
   71    | ID LP error
   72    | Exp LB Exp RB
   73    | Exp LB Exp error
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT
   78    | CHAR
   79    | Exp ERROR Exp
   80    | ERROR

   81 Args: Exp COMMA Args
   82     | Exp COMMA COMMA Args error
   83     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 11 16 19 22 23 25 37 38 39 40 44 45 48 65 69 71 73 82
    LOWER_ERROR (258)
    ERROR (259) 79 80
    LOWER_ELSE <Node_value> (260)
    ELSE <Node_value> (261) 35
    TYPE <Node_value> (262) 12
    STRUCT <Node_value> (263) 14 15 16
    IF <Node_value> (264) 34 35 40
    WHILE <Node_value> (265) 36 37
    RETURN <Node_value> (266) 33 39
    INT <Node_value> (267) 18 19 76
    FLOAT <Node_value> (268) 77
    CHAR <Node_value> (269) 78
    ID <Node_value> (270) 14 15 16 17 20 21 22 23 68 69 70 71 74 75
    ASSIGN <Node_value> (271) 50 51
    OR <Node_value> (272) 53
    AND <Node_value> (273) 52
    LT <Node_value> (274) 54
    LE <Node_value> (275) 55
    GT <Node_value> (276) 56
    GE <Node_value> (277) 57
    NE <Node_value> (278) 58
    EQ <Node_value> (279) 59
    LOWER_MINUS (280)
    PLUS <Node_value> (281) 60
    MINUS <Node_value> (282) 61 66
    MUL <Node_value> (283) 62
    DIV <Node_value> (284) 63
    NOT <Node_value> (285) 67
    LP <Node_value> (286) 20 21 22 23 34 35 36 37 40 64 65 68 69 70 71
    RP <Node_value> (287) 20 21 34 35 36 64 68 70
    LB <Node_value> (288) 18 19 72 73
    RB <Node_value> (289) 18 72
    DOT <Node_value> (290) 74
    SEMI <Node_value> (291) 4 5 31 33 43 45
    COMMA <Node_value> (292) 10 24 47 81 82
    LC <Node_value> (293) 14 16 28
    RC <Node_value> (294) 14 28


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    Program <Node_value> (41)
        on left: 1
        on right: 0
    ExtDefList <Node_value> (42)
        on left: 2 3
        on right: 1 3
    ExtDef <Node_value> (43)
        on left: 4 5 7 8
        on right: 3
    $@1 (44)
        on left: 6
        on right: 7
    ExtDecList <Node_value> (45)
        on left: 9 10 11
        on right: 4 8 10 11
    Specifier <Node_value> (46)
        on left: 12 13
        on right: 4 5 7 8 27 43 44
    StructSpecifier <Node_value> (47)
        on left: 14 15 16
        on right: 13
    VarDec <Node_value> (48)
        on left: 17 18 19
        on right: 9 10 11 18 19 27 49 50
    FunDec <Node_value> (49)
        on left: 20 21 22 23
        on right: 7
    VarList <Node_value> (50)
        on left: 24 25 26
        on right: 20 22 24 25
    ParamDec <Node_value> (51)
        on left: 27
        on right: 24 25 26
    CompSt <Node_value> (52)
        on left: 28
        on right: 7 32
    StmtList <Node_value> (53)
        on left: 29 30
        on right: 28 30
    Stmt <Node_value> (54)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 30 34 35 36 37 40
    DefList <Node_value> (55)
        on left: 41 42
        on right: 14 28 42
    Def <Node_value> (56)
        on left: 43 44 45
        on right: 42
    DecList <Node_value> (57)
        on left: 46 47 48
        on right: 16 43 44 45 47 48
    Dec <Node_value> (58)
        on left: 49 50
        on right: 46 47 48
    Exp <Node_value> (59)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 31 33 34 35 36 37 38 39 40 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 72 73 74 79 81 82 83
    Args <Node_value> (60)
        on left: 81 82 83
        on right: 68 69 81 82


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . ID LC DefList RC
   15                | STRUCT . ID
   16                | STRUCT . ID LC DecList error

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    7       | Specifier . FunDec $@1 CompSt
    8       | Specifier . ExtDecList error

    ID    shift, and go to state 11
    SEMI  shift, and go to state 12

    ExtDecList  go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   14 StructSpecifier: STRUCT ID . LC DefList RC
   15                | STRUCT ID .
   16                | STRUCT ID . LC DecList error

    LC  shift, and go to state 16

    $default  reduce using rule 15 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 11

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . LP VarList error
   23       | ID . LP error

    LP  shift, and go to state 17

    $default  reduce using rule 17 (VarDec)


State 12

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 13

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 18
    SEMI   shift, and go to state 19


State 14

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   11           | VarDec . ExtDecList error
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error

    ID     shift, and go to state 20
    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 9 (ExtDecList)

    ExtDecList  go to state 23
    VarDec      go to state 14


State 15

    7 ExtDef: Specifier FunDec . $@1 CompSt

    $default  reduce using rule 6 ($@1)

    $@1  go to state 24


State 16

   14 StructSpecifier: STRUCT ID LC . DefList RC
   16                | STRUCT ID LC . DecList error

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    ID      shift, and go to state 20

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    VarDec           go to state 27
    DefList          go to state 28
    Def              go to state 29
    DecList          go to state 30
    Dec              go to state 31


State 17

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   22       | ID LP . VarList error
   23       | ID LP . error

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 33

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 35
    ParamDec         go to state 36


State 18

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 20

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 21

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . INT error

    INT  shift, and go to state 37


State 22

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 20

    ExtDecList  go to state 38
    VarDec      go to state 14


State 23

   11 ExtDecList: VarDec ExtDecList . error

    error  shift, and go to state 39


State 24

    7 ExtDef: Specifier FunDec $@1 . CompSt

    LC  shift, and go to state 40

    CompSt  go to state 41


State 25

   45 Def: error . DecList SEMI

    ID  shift, and go to state 20

    VarDec   go to state 27
    DecList  go to state 42
    Dec      go to state 31


State 26

   43 Def: Specifier . DecList SEMI
   44    | Specifier . DecList error

    ID  shift, and go to state 20

    VarDec   go to state 27
    DecList  go to state 43
    Dec      go to state 31


State 27

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error
   49 Dec: VarDec .
   50    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 44
    LB      shift, and go to state 21

    $default  reduce using rule 49 (Dec)


State 28

   14 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 45


State 29

   42 DefList: Def . DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    ERROR   reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    CHAR    reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


State 30

   16 StructSpecifier: STRUCT ID LC DecList . error

    error  shift, and go to state 47


State 31

   46 DecList: Dec .
   47        | Dec . COMMA DecList
   48        | Dec . DecList error

    ID     shift, and go to state 20
    COMMA  shift, and go to state 48

    $default  reduce using rule 46 (DecList)

    VarDec   go to state 27
    DecList  go to state 49
    Dec      go to state 31


State 32

   23 FunDec: ID LP error .

    $default  reduce using rule 23 (FunDec)


State 33

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 20

    VarDec  go to state 50


State 35

   20 FunDec: ID LP VarList . RP
   22       | ID LP VarList . error

    error  shift, and go to state 51
    RP     shift, and go to state 52


State 36

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec . VarList error
   26        | ParamDec .

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    COMMA   shift, and go to state 53

    $default  reduce using rule 26 (VarList)

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 54
    ParamDec         go to state 36


State 37

   18 VarDec: VarDec LB INT . RB
   19       | VarDec LB INT . error

    error  shift, and go to state 55
    RB     shift, and go to state 56


State 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   11 ExtDecList: VarDec ExtDecList error .

    $default  reduce using rule 11 (ExtDecList)


State 40

   28 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    ERROR   reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    CHAR    reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 57
    Def              go to state 29


State 41

    7 ExtDef: Specifier FunDec $@1 CompSt .

    $default  reduce using rule 7 (ExtDef)


State 42

   45 Def: error DecList . SEMI

    SEMI  shift, and go to state 58


State 43

   43 Def: Specifier DecList . SEMI
   44    | Specifier DecList . error

    error  shift, and go to state 59
    SEMI   shift, and go to state 60


State 44

   50 Dec: VarDec ASSIGN . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 69


State 45

   14 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 46

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 47

   16 StructSpecifier: STRUCT ID LC DecList error .

    $default  reduce using rule 16 (StructSpecifier)


State 48

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 20

    VarDec   go to state 27
    DecList  go to state 70
    Dec      go to state 31


State 49

   48 DecList: Dec DecList . error

    error  shift, and go to state 71


State 50

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB INT error
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 21

    $default  reduce using rule 27 (ParamDec)


State 51

   22 FunDec: ID LP VarList error .

    $default  reduce using rule 22 (FunDec)


State 52

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 53

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 36


State 54

   25 VarList: ParamDec VarList . error

    error  shift, and go to state 73


State 55

   19 VarDec: VarDec LB INT error .

    $default  reduce using rule 19 (VarDec)


State 56

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 57

   28 CompSt: LC DefList . StmtList RC

    ERROR   shift, and go to state 61
    IF      shift, and go to state 74
    WHILE   shift, and go to state 75
    RETURN  shift, and go to state 76
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    CHAR    shift, and go to state 64
    ID      shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68
    LC      shift, and go to state 40

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 78
    Stmt      go to state 79
    Exp       go to state 80


State 58

   45 Def: error DecList SEMI .

    $default  reduce using rule 45 (Def)


State 59

   44 Def: Specifier DecList error .

    $default  reduce using rule 44 (Def)


State 60

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 61

   80 Exp: ERROR .

    $default  reduce using rule 80 (Exp)


State 62

   76 Exp: INT .

    $default  reduce using rule 76 (Exp)


State 63

   77 Exp: FLOAT .

    $default  reduce using rule 77 (Exp)


State 64

   78 Exp: CHAR .

    $default  reduce using rule 78 (Exp)


State 65

   68 Exp: ID . LP Args RP
   69    | ID . LP Args error
   70    | ID . LP RP
   71    | ID . LP error
   75    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 75 (Exp)


State 66

   66 Exp: MINUS . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 82


State 67

   67 Exp: NOT . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 83


State 68

   64 Exp: LP . Exp RP
   65    | LP . Exp error

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 84


State 69

   50 Dec: VarDec ASSIGN Exp .
   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   79    | Exp . ERROR Exp

    ERROR   shift, and go to state 85
    ASSIGN  shift, and go to state 86
    OR      shift, and go to state 87
    AND     shift, and go to state 88
    LT      shift, and go to state 89
    LE      shift, and go to state 90
    GT      shift, and go to state 91
    GE      shift, and go to state 92
    NE      shift, and go to state 93
    EQ      shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    MUL     shift, and go to state 97
    DIV     shift, and go to state 98
    LB      shift, and go to state 99
    DOT     shift, and go to state 100

    $default  reduce using rule 50 (Dec)


State 70

   47 DecList: Dec COMMA DecList .

    $default  reduce using rule 47 (DecList)


State 71

   48 DecList: Dec DecList error .

    $default  reduce using rule 48 (DecList)


State 72

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 73

   25 VarList: ParamDec VarList error .

    $default  reduce using rule 25 (VarList)


State 74

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP Exp error Stmt

    LP  shift, and go to state 101


State 75

   36 Stmt: WHILE . LP Exp RP Stmt
   37     | WHILE . LP Exp error Stmt

    LP  shift, and go to state 102


State 76

   33 Stmt: RETURN . Exp SEMI
   39     | RETURN . Exp error

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 103


State 77

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 78

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 104


State 79

   30 StmtList: Stmt . StmtList

    ERROR   shift, and go to state 61
    IF      shift, and go to state 74
    WHILE   shift, and go to state 75
    RETURN  shift, and go to state 76
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    CHAR    shift, and go to state 64
    ID      shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68
    LC      shift, and go to state 40

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 105
    Stmt      go to state 79
    Exp       go to state 80


State 80

   31 Stmt: Exp . SEMI
   38     | Exp . error
   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   79    | Exp . ERROR Exp

    error   shift, and go to state 106
    ERROR   shift, and go to state 85
    ASSIGN  shift, and go to state 86
    OR      shift, and go to state 87
    AND     shift, and go to state 88
    LT      shift, and go to state 89
    LE      shift, and go to state 90
    GT      shift, and go to state 91
    GE      shift, and go to state 92
    NE      shift, and go to state 93
    EQ      shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    MUL     shift, and go to state 97
    DIV     shift, and go to state 98
    LB      shift, and go to state 99
    DOT     shift, and go to state 100
    SEMI    shift, and go to state 107


State 81

   68 Exp: ID LP . Args RP
   69    | ID LP . Args error
   70    | ID LP . RP
   71    | ID LP . error

    error  shift, and go to state 108
    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68
    RP     shift, and go to state 109

    Exp   go to state 110
    Args  go to state 111


State 82

   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   66    | MINUS Exp .
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   79    | Exp . ERROR Exp

    PLUS   shift, and go to state 95
    MINUS  shift, and go to state 96
    MUL    shift, and go to state 97
    DIV    shift, and go to state 98
    LB     shift, and go to state 99
    DOT    shift, and go to state 100

    $default  reduce using rule 66 (Exp)


State 83

   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   67    | NOT Exp .
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   79    | Exp . ERROR Exp

    LB   shift, and go to state 99
    DOT  shift, and go to state 100

    $default  reduce using rule 67 (Exp)


State 84

   51 Exp: Exp . ASSIGN Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . LT Exp
   55    | Exp . LE Exp
   56    | Exp . GT Exp
   57    | Exp . GE Exp
   58    | Exp . NE Exp
   59    | Exp . EQ Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . MUL Exp
   63    | Exp . DIV Exp
   64    | LP Exp . RP
   65    | LP Exp . error
   72    | Exp . LB Exp RB
   73    | Exp . LB Exp error
   74    | Exp . DOT ID
   79    | Exp . ERROR Exp

    error   shift, and go to state 112
    ERROR   shift, and go to state 85
    ASSIGN  shift, and go to state 86
    OR      shift, and go to state 87
    AND     shift, and go to state 88
    LT      shift, and go to state 89
    LE      shift, and go to state 90
    GT      shift, and go to state 91
    GE      shift, and go to state 92
    NE      shift, and go to state 93
    EQ      shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    MUL     shift, and go to state 97
    DIV     shift, and go to state 98
    RP      shift, and go to state 113
    LB      shift, and go to state 99
    DOT     shift, and go to state 100


State 85

   79 Exp: Exp ERROR . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 114


State 86

   51 Exp: Exp ASSIGN . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 115


State 87

   53 Exp: Exp OR . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 116


State 88

   52 Exp: Exp AND . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 117


State 89

   54 Exp: Exp LT . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 118


State 90

   55 Exp: Exp LE . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 119


State 91

   56 Exp: Exp GT . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 120


State 92

   57 Exp: Exp GE . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 121


State 93

   58 Exp: Exp NE . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 122


State 94

   59 Exp: Exp EQ . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 123


State 95

   60 Exp: Exp PLUS . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 124


State 96

   61 Exp: Exp MINUS . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 125


State 97

   62 Exp: Exp MUL . Exp

    ERROR  shift, and go to state 61
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    CHAR   shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 126


State 98

   63 Exp: Exp DIV . Exp
